--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -496,3 +496,61 @@
     -ms-border-radius: 6px;
     -o-border-radius: 6px; */
 }
+
+/* start uploads */
+
+.dashboard .uploads .uploadsContent {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile > div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile:not(:nth-child(1))::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #eee;
+    top: -10px;
+    left: 0;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile>div img{
+    width: 40px;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile>div h3 {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile>div p {
+    font-size: 14px;
+    margin-top: 5px;
+    color: #888;
+}
+
+.dashboard .uploads .uploadsContent .uploadsFile span {
+    background-color: #eee;
+    padding: 5px 10px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+    font-size: 14px;
+}
