--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -645,3 +645,80 @@
         display: none;
     }
 }
+
+/* start reminders  */
+
+.dashboard .remindersContent {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.dashboard .remindersContent .reminderTask {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.dashboard .remindersContent .reminderTask .reminderShap {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dashboard .remindersContent .reminderTask .reminderShap div {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(1) .reminderShap {
+    border-right: 2px solid #0075ff;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(1) .reminderShap div {
+    background-color: #0075ff;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(2) .reminderShap {
+    border-right: 2px solid #f44336;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(2) .reminderShap div {
+    background-color: #f44336;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(3) .reminderShap {
+    border-right: 2px solid #22c55e;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(3) .reminderShap div {
+    background-color: #22c55e;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(4) .reminderShap {
+    border-right: 2px solid #f59e0b;
+}
+
+.dashboard .remindersContent .reminderTask:nth-child(4) .reminderShap div {
+    background-color: #f59e0b;
+}
+
+.dashboard .remindersContent .reminderTask .reTask h3 {
+    font-size: 14px;
+    font-weight: 500;
+    color: #121212;
+}
+
+.dashboard .remindersContent .reminderTask .reTask p {
+    font-size: 13px;
+    color: #888;
+    margin-top: 5px;
+}
