--- a/css/settingsStyle.css
+++ b/css/settingsStyle.css
@@ -174,3 +174,48 @@ textarea {
     background-color: #eee;
     color: #121212;
 }
+
+/* start socInfo */
+
+.socInfo .socContent {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.socInfo .socContent > div {
+    display: flex;
+    align-items: center;
+    background-color: #f6f6f6;
+    border: 1px solid rgb(187, 187, 187);
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
+}
+
+.socInfo .socContent>div i{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: 1px solid rgb(187, 187, 187);
+    color: #888;
+    transition: 0.4s;
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s;
+    -o-transition: 0.4s;
+}
+
+.socInfo .socContent>div input {
+    border: none;
+    padding-left: 5px;
+    width: 100%;
+}
+
+.socInfo .socContent > div:focus-within i {
+    color: #121212;
+}
